added nav bar and added information

--- a/about.html
+++ b/about.html
@@ -5,13 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <!-- ABOUT PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html"> Home </a>
+            </li>
+            <li>
+                <a href="menu.html"> Menu </a>
+            </li>
+            <li>
+                <a href="about.html"> About </a>
+            </li>
+            <li>
+                <a href="contact.html"> Contact </a>
+            </li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <div id="banner">
+        <img alt="Banner logo" src="assets/images/banner.png">
+    </div>
     <main>
         <!-- About page code here -->
+        <h1> About Us </h1>
+        <h2> Locations </h2>
+            <ul>
+                <li> New York City, NY </li>
+                <li> Las Vegas, NV </li>
+                <li> Los Angeles, CA </li>
+                <li> Miami, FL </li>
+            </ul>
+        <h2> Origin Story </h2>
+        <img alt="Spices" src="assets/images/about.jpg">
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni illum obcaecati ipsam adipisci eius, perferendis quas unde nihil, est possimus quasi culpa. Ducimus saepe ratione dicta natus esse ipsam odio!
+        </p>
     </main>
 </body>
 </html>
