--- a/index.html
+++ b/index.html
@@ -9,10 +9,40 @@
 <body>
     <!-- HOME PAGE -->
     <!-- TODO: Navbar here -->
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html"> Home </a>
+            </li>
+            <li>
+                <a href="menu.html"> Menu </a>
+            </li>
+            <li>
+                <a href="about.html"> About </a>
+            </li>
+            <li>
+                <a href="contact.html"> Contact </a>
+            </li>
+        </ul>
+    </nav>
     <!-- TODO: Banner Image here-->
+    <div id="banner">
+        <img alt="Banner logo" src="assets/images/banner.png">
+    </div>
+        <!-- TODO: Home page code here-->
     <main>
         <h1>H-Thai-ML</h1>
-        <!-- TODO: Home page code here-->
+        <h2>Appethaizing Thai Cuisine</h2>        
+        <div class="service">
+            <h3>Dine In</h3>
+        </div>
+        <div class="service">
+            <h3>Take Out</h3>
+        </div>
+        <div class="service">
+            <h3>Delivery</h3>
+        </div>
+        <img alt="Tables in Restaurant" src="assets/images/table-in-restaurant.jpg">
     </main>
 </body>
 </html>
